only thing left is to fix link spacing

--- a/CSS/hello_world_debug_sheet.css
+++ b/CSS/hello_world_debug_sheet.css
@@ -22,8 +22,8 @@ div {
     text-align: center;
 }
 
-a {
-
+h1 {
+    margin: 0 0 0 10px;
 }
 
 #rightside {
